feat: add database migration scripts and update Makefile for migration commands

--- a/ticketblitz/Makefile
+++ b/ticketblitz/Makefile
@@ -7,3 +7,8 @@ test:
 run: build
 	@./bin/ticketblitz
 
+db-it: 
+	@docker exec -it ticketblitz-db psql -U ticketblitz-admin -d ticketblitz-db
+
+migrate-up:
+	@migrate -path migrations -database "postgresql://ticketblitz-admin:password123@localhost:5432/ticketblitz-db?sslmode=disable" up
