--- a/ticketblitz/docker-compose.yml
+++ b/ticketblitz/docker-compose.yml
@@ -12,5 +12,27 @@ services:
     volumes:
       - ticketblitz-data:/var/lib/postgresql/data
 
+  redis:
+    image: redis:8.4-alpine
+    container_name: redis-ticketblitz
+    restart: unless-stopped
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
+    command: redis-server --save 60 1 --loglevel warning
+  
+  redis-insight:
+    image: redis/redisinsight:latest
+    container_name: ticketblitz-insight
+    restart: unless-stopped
+    ports:
+      - "5540:5540"
+    volumes:
+      - redis-insight-data:/data
+
+
 volumes:
   ticketblitz-data:
+  redis-data:
+  redis-insight-data:
