--- a/ticketblitz/docker-compose.yml
+++ b/ticketblitz/docker-compose.yml
@@ -30,6 +30,22 @@ services:
       - "5540:5540"
     volumes:
       - redis-insight-data:/data
+  
+  prometheus:
+    image: prom/prometheus:latest
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+  
+  grafana:
+    image: grafana/grafana:latest
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin
 
 
 volumes:
